[Add] background nature image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>DEAR PLANT</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/calendar2.css">
+    <!-- <link rel="stylesheet" href="css/calendar2.css"> -->
     <link rel="stylesheet" href="css/slick.css" type="text/css" /> 
     <link rel="stylesheet" href="css/templatemo-style.css">
     <style>
@@ -22,7 +22,7 @@ https://templatemo.com/tm-560-astro-motion
 -->
 </head>
 <body>
-    <img src="video/main3.webp" loading="lazy" style="opacity: 0.85" alt="Image" height=100% id="bg-video">
+    <img src="video/forest.png" loading="lazy" style="opacity: 0.85" alt="Image" height=100% id="bg-video">
     <!-- <video autoplay muted loop id="bg-video">
         <source src="video/main3.jpg" type="video/mp4">
     </video> -->
@@ -32,7 +32,7 @@ https://templatemo.com/tm-560-astro-motion
           <div class="col-xs-12">
             <div class="cd-slider-nav">
               <nav class="navbar navbar-expand-lg" id="tm-nav">
-                <a class="nav-link" href="#0"><img src="img/dearplant_puple.webp" loading="lazy" alt="Image" width="170" height=auto></a>
+                <a class="nav-link" href="#0"><img src="img/dearplant_white.webp" loading="lazy" alt="Image" width="170" height=auto></a>
                 <!-- <a class="navbar-brand" href="#">Dear Plant</a> -->
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-supported-content" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -40,13 +40,12 @@ https://templatemo.com/tm-560-astro-motion
                   <div class="collapse navbar-collapse" id="navbar-supported-content">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                       <li class="nav-item selected">
-                        <a class="nav-link" href="#0" data-no="1">PLANT SOUND</a>
+                        <!-- <a class="nav-link" href="#0" data-no="1">PLANT SOUND</a> -->
                         <!-- <div class="circle"></div> -->
                       </li>
-                      <li class="nav-item">
+                      <!-- <li class="nav-item">
                         <a class="nav-link" href="#0" data-no="2">MY DIARY</a>
-                        <!-- <div class="circle"></div> -->
-                      </li>
+                      </li> -->
                     </ul>
                   </div>
               </nav>
@@ -84,11 +83,16 @@ https://templatemo.com/tm-560-astro-motion
           <li data-page-no="1">
             <!-- Image Carousel -->
             <div class="mx-auto position-relative gallery-container">
-              <!-- <div class="circle intro-circle-1"></div>
-              <div class="circle intro-circle-2"></div> -->
+              <h4 class="text-center">식물 친구를 통해 자연을 느껴보세요.</h4>
+              <h5 class="text-center">식물 친구와의 인터랙션에 따라 다양한 자연의 소리가 재생됩니다..</h5>
+              <div class="text-center sound-button">
+                <p href="#0" data-page-no="1" id="read" class="btn2 btn2-primary tm-intro-btn">
+                  link sensor
+                </p>
+              </div> 
               <div class="mx-auto gallery-slider">
                 <figure class="effect-julia item" id="forest1">
-                    <img src="img/forest1.webp" loading="lazy" alt="Image" id="forest1_img">
+                    <img src="img/forest_small.png" loading="lazy" alt="Image" id="forest1_img">
                     <figcaption>
                         <div>
                             <p>숲속으로 여행을 떠나보세요.</p>
@@ -97,7 +101,7 @@ https://templatemo.com/tm-560-astro-motion
                     </figcaption>
                 </figure>
                 <figure class="effect-julia item" id="river1">
-                    <img src="img/river1.webp" loading="lazy" alt="Image" id="river1_img">
+                    <img src="img/river_small.png" loading="lazy" alt="Image" id="river1_img">
                     <figcaption>
                         <div>
                             <p>강가로 여행을 떠나보세요.</p>
@@ -106,7 +110,7 @@ https://templatemo.com/tm-560-astro-motion
                     </figcaption>
                 </figure>
                 <figure class="effect-julia item" id="cricket1">
-                    <img src="img/cricket1.webp" loading="lazy" alt="Image" id="cricket1_img">
+                    <img src="img/cricket_small.png" loading="lazy" alt="Image" id="cricket1_img">
                     <figcaption>
                         <div>
                             <p>아늑한 시골로 여행을 떠나보세요.</p>
@@ -115,7 +119,7 @@ https://templatemo.com/tm-560-astro-motion
                     </figcaption>
                 </figure>
                 <figure class="effect-julia item" id="ocean1">
-                    <img src="img/ocean1.webp" loading="lazy" alt="Image" id="ocean1_img">
+                    <img src="img/ocean_small.png" loading="lazy" alt="Image" id="ocean1_img">
                     <figcaption>
                         <div>
                             <p>바다로 여행을 떠나보세요.</p>
@@ -124,7 +128,7 @@ https://templatemo.com/tm-560-astro-motion
                     </figcaption>
                 </figure>
                 <figure class="effect-julia item" id="bird1">
-                    <img src="img/bird1.webp" loading="lazy" alt="Image" id="bird1_img">
+                    <img src="img/bird_small.png" loading="lazy" alt="Image" id="bird1_img">
                     <figcaption>
                         <div>
                             <p>어여쁜 새가 바삐 움직이네요.</p>
@@ -133,7 +137,7 @@ https://templatemo.com/tm-560-astro-motion
                     </figcaption>
                 </figure>
                 <figure class="effect-julia item" id="bathtub1">
-                    <img src="img/bathtub1.webp" loading="lazy" alt="Image" id="bathtub1_img">
+                    <img src="img/bathtub_small.png" loading="lazy" alt="Image" id="bathtub1_img">
                     <figcaption>
                         <div>
                             <p>욕조에 누워 편안히 책 읽어보는 거 어때요?</p>
@@ -142,7 +146,7 @@ https://templatemo.com/tm-560-astro-motion
                     </figcaption>
                 </figure>
                 <figure class="effect-julia item" id="rain1">
-                    <img src="img/rain1.webp" loading="lazy" alt="Image" id="rain1_img">
+                    <img src="img/rain_small.png" loading="lazy" alt="Image" id="rain1_img">
                     <figcaption>
                         <div>
                             <p>지금 밖에 비가 오고 있어요.</p>
@@ -151,7 +155,7 @@ https://templatemo.com/tm-560-astro-motion
                     </figcaption>
                 </figure>
                 <figure class="effect-julia item" id="oven1">
-                    <img src="img/oven1.webp" loading="lazy" alt="Image" id="oven1_img">
+                    <img src="img/oven_small.png" loading="lazy" alt="Image" id="oven1_img">
                     <figcaption>
                         <div>
                             <p>어떤 요리가 완성되고 있을까요?</p>
@@ -160,7 +164,7 @@ https://templatemo.com/tm-560-astro-motion
                     </figcaption>
                 </figure>
                 <figure class="effect-julia item" id="campfire1">
-                    <img src="img/fire1.webp" loading="lazy" alt="Image" id="campfire1_img">
+                    <img src="img/fire_small.png" loading="lazy" alt="Image" id="campfire1_img">
                     <figcaption>
                         <div>
                             <p>모닥불 소리를 들어보세요.</p>
@@ -170,15 +174,10 @@ https://templatemo.com/tm-560-astro-motion
                 </figure>
               </div>
             </div>
-            <div class="text-center sound-button">
-              <p href="#0" data-page-no="1" id="start" class="btn2 btn2-primary tm-intro-btn">
-                play sound
-              </p>
-            </div> 
           </li>
-          <li data-page-no="2" class="px-3">
+          <!-- <li data-page-no="2" class="px-3">
             <div id='calendar'></div>   
-          </li>
+          </li> -->
         </ul>
     </div>
     <div class="container-fluid">
@@ -202,7 +201,7 @@ https://templatemo.com/tm-560-astro-motion
   <script src="js/bootstrap.min.js"></script>
   <script src="js/slick.js"></script>
   <script src="js/templatemo-script.js"></script>
-  <script src="js/calendar2.js"></script>
+  <!-- <script src="js/calendar2.js"></script> -->
   <script>
     var deviceName = 'PLITOR_AAA404'
     var bleService = '0000ffe0-0000-1000-8000-00805f9b34fb'
@@ -210,22 +209,22 @@ https://templatemo.com/tm-560-astro-motion
     var bluetoothDeviceDetected
     var gattCharacteristic
     var pre_value = -1
-    var sound_play = false
+    var sound_play = true
     var base_sound = new Audio('sound/base1.mp3');
     var nature_sound = new Audio('sound/forest1.mp3');
     var pre_click = "forest1_img"
     base_sound.volume = 0.5
 
-    document.getElementById(pre_click).style.border="3px solid #7b3f91"
+    document.getElementById(pre_click).style.border="5px solid #7b3f91"
   
     document.body.style.backgroundColor = "#000000";
     document.querySelector('#read').addEventListener('click', function() {
       if (isWebBluetoothEnabled()) { read() }
     })
   
-    document.querySelector('#start').addEventListener('click', function(event) {
-      if (isWebBluetoothEnabled()) { sound_play = true }
-    })
+    // document.querySelector('#start').addEventListener('click', function(event) {
+    //   if (isWebBluetoothEnabled()) { sound_play = true }
+    // })
   
     // document.querySelector('#stop').addEventListener('click', function(event) {
     //   if (isWebBluetoothEnabled()) { stop() }
@@ -235,55 +234,64 @@ https://templatemo.com/tm-560-astro-motion
       nature_sound = new Audio('sound/forest1.mp3');
       document.getElementById(pre_click).style.border="none"
       pre_click = "forest1_img"
-      document.getElementById(pre_click).style.border="3px solid #7b3f91"
+      document.getElementById(pre_click).style.border="5px solid #7b3f91"
+      document.getElementById('bg-video').src="video/forest.png"
     })
     document.querySelector('#river1').addEventListener('click', function() {
       nature_sound = new Audio('sound/river1.mp3');
       document.getElementById(pre_click).style.border="none"
       pre_click = "river1_img"
-      document.getElementById(pre_click).style.border="3px solid #7b3f91"
+      document.getElementById(pre_click).style.border="5px solid #7b3f91"
+      document.getElementById('bg-video').src="video/river.png"
     })
     document.querySelector('#cricket1').addEventListener('click', function() {
       nature_sound = new Audio('sound/cricket1.mp3');
       document.getElementById(pre_click).style.border="none"
       pre_click = "cricket1_img"
-      document.getElementById(pre_click).style.border="3px solid #7b3f91"
+      document.getElementById(pre_click).style.border="5px solid #7b3f91"
+      document.getElementById('bg-video').src="video/cricket.png"
     })
     document.querySelector('#ocean1').addEventListener('click', function() {
       nature_sound = new Audio('sound/ocean1.mp3');
       document.getElementById(pre_click).style.border="none"
       pre_click = "ocean1_img"
-      document.getElementById(pre_click).style.border="3px solid #7b3f91"
+      document.getElementById(pre_click).style.border="5px solid #7b3f91"
+      document.getElementById('bg-video').src="video/ocean.png"
     })
     document.querySelector('#campfire1').addEventListener('click', function() {
       nature_sound = new Audio('sound/campfire1.mp3');
       document.getElementById(pre_click).style.border="none"
       pre_click = "campfire1_img"
-      document.getElementById(pre_click).style.border="3px solid #7b3f91"
+      document.getElementById(pre_click).style.border="5px solid #7b3f91"
+      document.getElementById('bg-video').src="video/campfire.png"
     })
     document.querySelector('#bird1').addEventListener('click', function() {
       nature_sound = new Audio('sound/bird1.mp3');
       document.getElementById(pre_click).style.border="none"
       pre_click = "bird1_img"
-      document.getElementById(pre_click).style.border="3px solid #7b3f91"
+      document.getElementById(pre_click).style.border="5px solid #7b3f91"
+      document.getElementById('bg-video').src="video/bird.png"
     })
     document.querySelector('#oven1').addEventListener('click', function() {
       nature_sound = new Audio('sound/oven1.mp3');
       document.getElementById(pre_click).style.border="none"
       pre_click = "oven1_img"
-      document.getElementById(pre_click).style.border="3px solid #7b3f91"
+      document.getElementById(pre_click).style.border="5px solid #7b3f91"
+      document.getElementById('bg-video').src="video/oven.png"
     })
     document.querySelector('#bathtub1').addEventListener('click', function() {
       nature_sound = new Audio('sound/bathtub1.mp3');
       document.getElementById(pre_click).style.border="none"
       pre_click = "bathtub1_img"
-      document.getElementById(pre_click).style.border="3px solid #7b3f91"
+      document.getElementById(pre_click).style.border="5px solid #7b3f91"
+      document.getElementById('bg-video').src="video/bathtub.png"
     })
     document.querySelector('#rain1').addEventListener('click', function() {
       nature_sound = new Audio('sound/rain1.mp3');
       document.getElementById(pre_click).style.border="none"
       pre_click = "rain1_img"
-      document.getElementById(pre_click).style.border="3px solid #7b3f91"
+      document.getElementById(pre_click).style.border="5px solid #7b3f91"
+      document.getElementById('bg-video').src="video/rain.png"
     })
   
     function isWebBluetoothEnabled() {
@@ -340,11 +348,8 @@ https://templatemo.com/tm-560-astro-motion
       .then(characteristic => {
         gattCharacteristic = characteristic
         console.log(gattCharacteristic)
-        document.getElementById("plant_talk").innerHTML = "<br>아이 심심해 <br><br> 근데 나 목말라..물 좀 줄래?<br>"; 
-        document.getElementById("read").style.display = "none"
         gattCharacteristic[0].addEventListener('characteristicvaluechanged',
             handleChangedValue)
-        document.querySelector('#start').disabled = false
         start()
       })
     }
@@ -364,12 +369,12 @@ https://templatemo.com/tm-560-astro-motion
       if (value == 1) {
           nature_sound.animate({volume: 0.0}, 5000);
           nature_sound.pause()
-          document.getElementById("plant_talk").innerHTML = "나 목이 타들어갈 거 같아...물마시고 싶어<br>"; 
+          //document.getElementById("plant_talk").innerHTML = "나 목이 타들어갈 거 같아...물마시고 싶어<br>"; 
         } else if (value == 2){
-          document.getElementById("plant_talk").innerHTML = "<br>반가워:) 오랜만이야<br>"; 
+          //document.getElementById("plant_talk").innerHTML = "<br>반가워:) 오랜만이야<br>"; 
           base_sound.play()
         } else if (value == 3){
-          document.getElementById("plant_talk").innerHTML = "<br>히히 간지럽다>_< <br><br> 근데 나 목말라..물 좀 줄래?<br>";
+          //document.getElementById("plant_talk").innerHTML = "<br>히히 간지럽다>_< <br><br> 근데 나 목말라..물 좀 줄래?<br>";
           nature_sound.play()
           nature_sound.animate({volume: 1.0}, 5000);
         } 
